--- a/src/pages/edit-profile/edit-profile.scss
+++ b/src/pages/edit-profile/edit-profile.scss
@@ -29,15 +29,15 @@
       text-align: center;
       // padding-bottom: 28px;
 
-      img {
-        height: 128px;
-        width: 128px;
-        border-radius: 50%;
-        // margin-top: -100px;
-        border: solid 4px #fff;
-        display: inline;
-        box-shadow: 0 0 28px rgba(255,255,255, .65);
-      }
+      // img {
+      //   height: 128px;
+      //   width: 128px;
+      //   border-radius: 50%;
+      //   // margin-top: -100px;
+      //   border: solid 4px #fff;
+      //   display: inline;
+      //   box-shadow: 0 0 28px rgba(255,255,255, .65);
+      // }
 
       h2 {
         font-size: 2.5rem;
