--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,7 +20,7 @@ $background-color: #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #563d7c,
+  primary: #347ABF,
   secondary: #986cda,
   danger: #f53d3d,
   light: #D7D6E1,
