--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,8 @@
 page-home,
 .home {
+  .scroll-content {
+    background-color: color($colors, primary);
+  }
   .icon-title {
     width: 28px;
     height: 28px;
@@ -219,6 +222,7 @@ page-home,
 
     margin-top: 100px;
     overflow: visible;
+    background-color: color($colors, primary);
 
     ion-card-content {
       padding: 32px;
